first step copy updated

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<a class="nav-link" href="#step_one">Step 1 - Becoming Street Homeless</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#step_two">Step 2 - &quot;Sighting&quot; Process</a>
+						<a class="nav-link" href="#step_two">Step 2 - &quot;Sightings&quot; Process</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#step_three">Step 3 - 9 Months on the Street</a>
@@ -128,7 +128,7 @@
 											</g>
 											<g transform="translate(490 -30)"><!-- replace with your target upper left corner coordinates -->
 												<text class="graphText" x="0" y="0" fill="#707070">
-													<tspan x="0" dy="1.2em">&quot;SIGHTING&quot;</tspan>
+													<tspan x="0" dy="1.2em">&quot;SIGHTINGS&quot;</tspan>
 													<tspan x="0" dy="1.2em">PROCESS</tspan>
 												</text>
 											</g>
@@ -209,8 +209,8 @@
 									</div>
 									<div class="row">
 										<div class="col-12">
-											<h2>&quot;Sighting&quot; Process</h2>
-											<p>NYC mandates people be "sighted" three times, in their sleep spot, at random, before being offered a case manager</p>
+											<h2>&quot;Sightings&quot; Process</h2>
+											<p>NYC mandates people be "sighted" three times, in their sleep spot, at random, before being offered *an outreach* case manager</p>
 											<hr>
 										</div>
 									</div>
