--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 									<div class="row">
 										<div class="col-12">
 											<h2>&quot;Sightings&quot; Process</h2>
-											<p>NYC mandates people be "sighted" three times, in their sleep spot, at random, before being offered *an outreach* case manager</p>
+											<p>NYC mandates people be "sighted" three times, in their sleep spot, at random, before being offered an outreach case manager</p>
 											<hr>
 										</div>
 									</div>
