Jon's copy updated

--- a/contentStep7.html
+++ b/contentStep7.html
@@ -143,14 +143,14 @@
 				<div class="card-header" id="re6Heading6">
 					<h5 class="mb-0">
 						<button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#re7Collapse6" aria-expanded="false" aria-controls="re7Collapse6">
-							We agree with Council Member Levin: CityFHEPS should be raised to fair market rate
+							New York State should pass Assemblyman Hevesi&apos;s Home Stability Support bill
 						</button>
 					</h5>
 				</div>
 
 				<div id="re7Collapse6" class="collapse" aria-labelledby="re6Heading6" data-parent="#accordionExample">
 					<div class="card-body">
-						<p>As part of the new CityFHEPs voucher program, we agree with Council Member Levin’s crucial recommendation that the voucher amount be increased for all household levels. He states, “The current voucher amount is simply too low to meet the cost of housing in New York. We need to commit to a process that meets rental needs for all households facing homelessness."</p>
+						<p>We support Assemblyman Hevesi&apos;s <a href="http://www.homestabilitysupport.com/about-overview" target="_blank">Home Stability Support</a> legislation. The legislation has the support of 120 State Assembly Members, 26 State Senators, 43 City Council Members, Mayor de Blasio, Comptroller Stringer, and four Borough Presidents. Governor Cuomo, who would have to sign the legislation or be vetoed, is yet to support it. You can read more about HSS by visiting the website or by clicking “Read More.”</p>
 						<p><button class="btn btn-link" onclick="readMore7('moreStep7re6')">Read More</button></p>
 					</div>
 				</div>
