--- a/moreStep7re6.html
+++ b/moreStep7re6.html
@@ -1,16 +1,30 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col col-xs-12">
-			<h3>We agree with Council Member Levin: CityFHEPS should be raised to fair market rate<hr></h3>
+			<h3>New York State should pass Assemblyman Hevesi&apos;s Home Stability Support bill<hr></h3>
 			<button type="button" class="close readMoreClose" onclick="closeReadMore()"><span aria-hidden="true">&times;</span></button>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-12 col-lg-4">
-			<p class="highlights medium">As part of the new CityFHEPs voucher program, we agree with Council Member Levin’s crucial recommendation that the voucher amount be increased for all household levels.</p>
+			<p class="highlights medium">The following was pasted directly from the HSS website. We support all of this, as would call on New York City to further raise the supplement to meet 100% of FMR.</p>
 		</div>
 		<div class="col-md-12 col-lg-8">
-			<p>As part of the new CityFHEPs voucher program, we agree with Council Member Levin’s crucial recommendation that the voucher amount be increased for all household levels. He states, “The current voucher amount is simply too low to meet the cost of housing in New York. We need to commit to a process that meets rental needs for all households facing homelessness." The current city vouchers’ maximum rent amounts range from $1213 to $1228 for a 1 person household and $1268 to $1284 for a 2 person household. Federal voucher maximum rental amounts are significantly more, starting at $1590 for studio apartments and $1636 for a 1 bedroom. Comparatively, fair market rent for New York County is set at $1514 for a studio apartment and $1558 for a 1 bedroom apartment. The current maximum rental rates for city vouchers make it obvious why so many New Yorkers trying to utilize these vouchers cannot find units - the rates are too low. Increasing the voucher amounts to at least fair market rent will make it easier for households to find appropriate units in a community they prefer, while being within their budget and the city’s rental limits.</p>
+			<p>Home Stability Support (HSS) will be a new statewide rent supplement for families and individuals who are eligible for public assistance benefits and who are facing eviction, homelessness, or loss of housing due to domestic violence or hazardous living conditions. HSS will be 100% federally and state-funded, and will replace all existing optional rent supplements.
+			</p>
+			<p>The rent supplements will be a bridge between the current shelter allowance and 85% of the fair market rent determined by HUD.  Local districts will have the option to further raise the supplement up to 100% of the fair market rent at local expense.</p>
+
+			<p>To address the fact that the heating allowance has not been increased in 30 years, and assistance currently available doesn’t go far enough to help pay for heat, HSS will have a heating differential for homes that do not include heat in the rent.</p>
+
+			<p>HSS is good for New York State because:
+				<ul>
+					<li>HSS will keep families and individuals on public assistance in their homes and out of homeless shelters by providing sufficient rental and, in some cases, heating assistance.</li>
+	 
+					<li>HSS will significantly reduce costs to the state and taxpayers by preventing evictions, reducing emergency shelter utilization and reducing the costs of other homeless services.</li>
+		 
+					<li>HSS will provide mandate relief to financially strapped counties that already have shelter supplement programs, and will benefit all communities across the state by using state and federal funds to stabilize families and neighborhoods.</li>
+				</ul>
+			</p>
 		</div>
 	</div>
 </div>
