donate button added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 					</li>
 					<div class="dropdown-divider"></div>
 					<li class="nav-item">
-						<a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Learn more about us</a>
+						<a class="nav-link" href="https://www.paypal.com/us/fundraiser/charity/2810089" target="_blank">Donate Now</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal" style="float: none;">Learn more about us</a>
 					</li>
 				</ul>
 			</div>
@@ -77,10 +80,10 @@
 										<h1 class="logo logoWeb">Human NYC</h1>
 									</div>
 									<div class="topMenu col-md-6 col-lg-8">
-										<p class="ourTeam"><strong>Our team spent two years listening to homeless New Yorkers.</strong><br>This website aims to summarize our findings and push forward sensible reforms that we developed alongside our homeless neighbors.</p>
+										<p class="ourTeam"><strong>Our team spent two years listening to homeless New Yorkers.</strong><br>This website aims to summarize our findings and push forward sensible reforms that we developed alongside our homeless neighbors. <a href="#" data-toggle="modal" data-target="#exampleModal" style="float: none;">Learn more about us</a></p>
 									</div>
 									<div class="topMenu col-md-3 col-lg-2 text-right">
-										<button type="button" class="btn btn-link nav-modal-link" data-toggle="modal" data-target="#exampleModal">Learn more about us</button>
+										<a class="btn btn-link nav-modal-link" href="https://www.paypal.com/us/fundraiser/charity/2810089" target="_blank">Donate Now</a>
 									</div>
 								</div>
 							</div>
